--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -11,15 +11,13 @@
   border-radius: 10px;
   margin: 0px;
 }
-
 .card1 .imagentarjeta {
   display: flex;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   border: 20px;
   height: auto;
 }
-
 .card1 .titulotarjeta {
   font-size: 25px;
   text-align: center;
@@ -27,11 +25,9 @@
   padding-bottom: 10px;
   font-weight: 600;
 }
-
 .card1 .textotarjeta {
   text-align: center;
 }
-
 .card1 .botontarjeta {
   border-radius: 10px;
   height: 50px;
@@ -41,7 +37,6 @@
   font-size: 16px;
   font-weight: 400;
 }
-
 .card1 .botontarjeta:hover {
   border-radius: 10px;
   height: 50px;
@@ -57,17 +52,14 @@
   padding-bottom: 30px;
   padding-top: 30px;
 }
-
 .fondocontacto .titulocontacto {
   font-weight: 600;
   font-size: 30px;
 }
-
 .fondocontacto .textonumero {
   font-weight: 600;
   font-size: 16px;
 }
-
 .fondocontacto .mapa {
   border-radius: 20px;
 }
@@ -173,6 +165,4 @@ li {
   .textfooter {
     display: none;
   }
-} 
-
-/*# sourceMappingURL=estilos.css.map */
+}/*# sourceMappingURL=estilos.css.map */
