--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -10,6 +10,7 @@
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 10px;
   margin: 0px;
+  height: 100%;
 }
 .card1 .imagentarjeta {
   display: flex;
@@ -36,6 +37,7 @@
   background-color: rgb(237, 237, 237);
   font-size: 16px;
   font-weight: 400;
+  width: 100%;
 }
 .card1 .botontarjeta:hover {
   border-radius: 10px;
@@ -52,16 +54,22 @@
   padding-bottom: 30px;
   padding-top: 30px;
 }
-.fondocontacto .titulocontacto {
-  font-weight: 600;
-  font-size: 30px;
-}
 .fondocontacto .textonumero {
   font-weight: 600;
   font-size: 16px;
 }
 .fondocontacto .mapa {
   border-radius: 20px;
+}
+
+.titulocontacto {
+  font-weight: 600;
+  font-size: 30px;
+  text-align: left;
+}
+
+.textocontacto {
+  text-align: left;
 }
 
 .barratop {
@@ -164,5 +172,15 @@ li {
 @media screen and (max-width: 768px) {
   .textfooter {
     display: none;
+  }
+}
+.altobanner {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media screen and (max-width: 768px) {
+  .altobanner {
+    height: 300px;
   }
 }/*# sourceMappingURL=estilos.css.map */
